objects/ccrz__E_PriceListItem__c.object
<CustomObject>
    <description>Represents an entry in the Pricelist.  Each pricelist object is made up of 1 or more pricelist item objects.  This item objects contain a reference to the product and hold a price value (0, in the case where only entitlements are being used).  The products referenced within these items will be displayed in search and product listings on the external site.</description>
    <fields>
        <fullName>DiscountDelta__c</fullName>
        <description>Holds the unit discount delta to send to jde with pallet products.</description>
        <label>Discount Price Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountedBagPrice__c</fullName>
        <inlineHelpText>Set on Pallet product price list item. Price per bag when purchasing pallet product to be displayed on PDP.</inlineHelpText>
        <label>Discounted Bag Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsPreBook__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsPreBook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PalletUnitPrice__c</fullName>
        <description>Holds the price for the item when purchased in increments of pallet size.</description>
        <inlineHelpText>Set on the bag price list item. Holds the price for the item when purchased in increments of pallet size.</inlineHelpText>
        <label>Pallet Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_DwCheckSum__c</fullName>
        <label>Checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_IsPreBook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPreBook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_oo_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Price List Items</relationshipLabel>
        <relationshipName>CC_Price_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_ShipToNumber__c</fullName>
        <description>For ETL logic data so that they can upload data faster. Not used to application logic.</description>
        <label>Ship To Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The end date for the price list item.  The end date is the date at which the item will no longer be available.  For example if the end date is July 1, 2015 then the price list item is valid on June 30, 2015 but no longer valid on July 1, 2015.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__MaxQty__c</fullName>
        <description>Maximum Quantity</description>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__MinQty__c</fullName>
        <description>Minimum Quantity</description>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>Holds the price for the item. If pricing is not being utilized, fill in a default value, such as 0.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__PricelistItemId__c</fullName>
        <description>External reference id for this entry</description>
        <externalId>true</externalId>
        <label>Pricelist Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Pricelist__c</fullName>
        <description>Required - The reference to the pricelist</description>
        <label>Pricelist</label>
        <referenceTo>ccrz__E_PriceList__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>E_PriceListItems1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required - The reference to the product entry</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>E_PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked if this PriceListItem is pricing a SubProdTerm</description>
        <inlineHelpText>Check if this price is for a subscription term AND this is the recurring price for that term.</inlineHelpText>
        <label>Recurring Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this item record is active. This is the first date the item will be active</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The subscription term this price is associated with.</description>
        <inlineHelpText>Enter the subscription term this price is associated with.</inlineHelpText>
        <label>SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Price List Items</relationshipLabel>
        <relationshipName>E_PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Unit of Measure for this price.  This field in combination with the product can give UOM specific pricing.  This field is optional, and allows for general pricing for a product independent of UOM.</description>
        <inlineHelpText>Unit of Measure for this price.  This field in combination with the product can give UOM specific pricing.  This field is optional, and allows for general pricing for a product independent of UOM.</inlineHelpText>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Price List Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>PriceListItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>